[tool.poetry]
name = "ascii-art-generator"
version = "1.0"
description = ""
authors = ["Pedro Mariano <contact@cmhpedro.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
